main.css
@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,400i,600');

:root {
	--color-10: #fff;
	--color-20: #000;
	--color-30: #03c;
	
	--spacing-dynamic: 2rem;
	--spacing-static: 2rem;

	--font-size-10: 1.5rem;
	--font-size-20: 2rem;
	--font-size-30: 2.75rem;

	--line-height-copy: 1.5;
	--line-height-headline: 1.25;

	--font-weight-10: 400;
	--font-weight-20: 600;

	--transition-duration-10: 100ms;
}

html {
	font-size: 100%;
}

body {
	margin: 0;
	padding: var(--spacing-dynamic);
	color: var(--color-20);

	font-family: 'IBM Plex Serif', 'Times New Roman', serif;
	font-weight: var(--font-weight-10);

	-moz-osx-font-smoothing: grayscale;
	 -webkit-font-smoothing: antialiased;
	-webkit-font-feature-settings: "liga" 1, "dlig" 1, "onum" 1;
	   -moz-font-feature-settings: "liga" 1, "dlig" 1, "onum" 1;
	        font-feature-settings: "liga" 1, "dlig" 1, "onum" 1;
	
	font-size: var(--font-size-10);
	line-height: var(--line-height-copy);
	letter-spacing: calc(-1rem / 128);

	min-height: calc(100vh - var(--spacing-dynamic) - var(--spacing-dynamic));

	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	justify-content: space-between;
	align-content: space-between;
	background-color: var(--color-10);
}

body::after {
	z-index: -1;
	position: fixed;
	content: '';
	top: -10vh;
	left: -10vw;
	width: 120vw;
	height: 120vh;
	background-color: var(--color-10);
	background-image: url(img/backdrop-01.gif);
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
	background-blend-mode: darken;
	-webkit-filter: contrast(2) blur(1.5rem);
	        filter: contrast(2) blur(1.5rem);
	opacity: .3;
}

.header {
	display: inline-flex;
}

.logo {
	height: calc(var(--font-size-10)*2);
	width: auto;
	margin-bottom: calc(var(--spacing-static)/2);
}

h1, h2, h3, h4, h5, p {
	margin: 0;
}

a {
	color: var(--color-20);
	font-style: italic;
	text-decoration: none;
	border-bottom: .0625rem solid var(--color-20);
	transition: opacity var(--transition-duration-10) ease;
}

a:hover {
	opacity: .7;
	transition: opacity var(--transition-duration-10) ease;
}

.copy-10 {
	margin-bottom: var(--spacing-static);
}

.copy-10:last-child {
	margin-bottom: 0;
}

strong {
	font-style: italic;
	font-weight: var(--font-weight-10);
}

.headline-10, .headline-20, .headline-30 {
	line-height: var(--line-height-headline);
}

.headline-10 {
	font-size: var(--font-size-10);
	font-weight: var(--font-weight-20);
	margin-bottom: calc(var(--spacing-static)/2);
	letter-spacing: calc(-1rem / 64);
}

.headline-20 {
	font-size: var(--font-size-20);
	font-weight: var(--font-weight-20);
	margin-bottom: calc(var(--spacing-static)/2);
	letter-spacing: calc(-1rem / 32);
}

.headline-30 {
	font-size: var(--font-size-30);
	font-weight: var(--font-weight-20);
	margin-bottom: var(--spacing-static);
	letter-spacing: calc(-1rem / 16);
}

section:last-child {
	margin-bottom: 0;
}

.content {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	align-items: flex-end;
	justify-content: space-between;
}

.cv {
	flex-basis: 100vw;
}

.footer {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.footer a {
	margin: var(--spacing-static) calc(var(--spacing-static)*1.5) 0 0;
}

.footer a:last-child {
	margin-right: 0;
}

@media screen and (min-width: 48rem) {

	:root {
		--spacing-dynamic: 4rem;
	}

}

@media screen and (min-width: 64rem) {

	.cv {
		margin-bottom: 0;
		margin-right: var(--spacing-dynamic);
		flex-basis: 50vw;
	}

}

@media screen and (min-width: 80rem) {

	.copy-10, .headline-10, .headline-20, .headline-30 {
		max-width: 60vw;
	}

}

@media (prefers-color-scheme: dark) {

	:root {
		--color-10: #000;
		--color-20: #fff;
	}

	.img {
		-webkit-filter: invert(1);
		        filter: invert(1);
	}

}

